full app commit