@@ -1,16 +1,15 @@
 package by.epam.java.entity;
 
-import by.epam.java.observers.IObserver;
 import by.epam.java.specifications.ISpecification;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public class CustomRepository implements IObserver<CustomArray> {
+public class CustomRepository {
     private final HashMap<Long, CustomArray> mapOfArrays = new HashMap<>();
 
-    private static final CustomWarehouse instance = new CustomWarehouse();
+    private static final CustomRepository instance = new CustomRepository();
 
     public void add(CustomArray array) {
         mapOfArrays.put(array.getId(), array);
@@ -24,16 +23,26 @@ public class CustomRepository implements IObserver<CustomArray> {
         return mapOfArrays.get(index);
     }
 
-    public static CustomWarehouse getInstance() {
+    public static CustomRepository getInstance() {
         return instance;
     }
-    public List<CustomArray> query(ISpecification<CustomArray> specification) {
-        return mapOfArrays.values()
-                .stream().filter(specification::specify).collect(Collectors.toList());
+
+    public List<CustomArray> getAll() {
+        return mapOfArrays.values().stream().toList();
     }
 
-    @Override
-    public void observe(CustomArray array) {
+    public List<CustomArray> query(ISpecification<CustomArray> specification) {
+        return mapOfArrays.values().stream()
+                .filter(specification::specify).collect(Collectors.toList());
+    }
 
+    public List<CustomArray> query(ISpecification<CustomArray> specification, boolean higher) {
+        return higher
+                ? mapOfArrays.values().stream()
+                    .filter(array -> specification.specify(array, true))
+                    .collect(Collectors.toList())
+                : mapOfArrays.values().stream()
+                    .filter(array -> specification.specify(array, false))
+                    .collect(Collectors.toList());
     }
 }
